kubernetes/raw-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopnest-backend
  labels:
    app: shopnest-backend
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: shopnest-backend

  template:
    metadata:
      labels:
        app: shopnest-backend

    spec:
      containers:
        - name: backend
          image: shopnestacr2026.azurecr.io/shopnest-backend:v1

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
