kubernetes/raw-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopnest-frontend
  labels:
    app: shopnest-frontend

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: shopnest-frontend

  template:
    metadata:
      labels:
        app: shopnest-frontend

    spec:
      containers:
        - name: frontend
          image: shopnestacr2026.azurecr.io/shopnest-frontend:v2

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: frontend-runtime-config
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
              readOnly: true

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

      volumes:
        - name: frontend-runtime-config
          configMap:
            name: shopnest-frontend-config
