kubernetes/raw-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopnest-frontend
spec:
  selector:
    app: shopnest-frontend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
